<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_campus"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_campus_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_classroom"
        android:icon="@drawable/ic_baseline_classroom_24"
        android:title="@string/menu_room" />

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_baseline_messages_24"
        android:title="@string/menu_messages" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_profile_24"
        android:title="@string/menu_profile" />

</menu>